# belajar-java-gi

./: .editorconfig  .gitignore  README.md  build.gradle.kts  hypersonic.in  meson.build  settings.gradle.kts
buildSrc/src/main/kotlin/: CommandExecutor.kt  EnvironmentPlugin.kt  GLibBuildTools.kt  GtkPlugin.kt  MesonPlugin.kt
data/: io.ibnuja.Hypersonic.desktop.in  io.ibnuja.Hypersonic.gschema.xml  io.ibnuja.Hypersonic.hypersonic.in  io.ibnuja.Hypersonic.metainfo.xml.in  io.ibnuja.Hypersonic.service.in  meson.build
data/icons/: meson.build
gradle/wrapper/: gradle-wrapper.properties
po/: POTFILES.in  id.po  meson.build
src/main/java/id/extonan/: Hypersonic.java  HypersonicApp.java  HypersonicMainWindow.java  HypersonicSettings.java
src/main/java/io/ibnuja/: Hypersonic.java  HypersonicApp.java  HypersonicMainWindow.java  HypersonicSettings.java  HypersonicSidebar.java
src/main/java/io/ibnuja/hypersonic/: Hypersonic.java  LoggingBootstrap.java  MainWindow.java
src/main/java/io/ibnuja/hypersonic/audio/: AudioPlayer.java  Backend.java  GstBackend.java  PlaybackAction.java
src/main/java/io/ibnuja/hypersonic/model/: AppModel.java  NavigationModel.java  Song.java
src/main/java/io/ibnuja/hypersonic/navigation/: HomePage.java  Route.java  ScreenFactory.java
src/main/java/io/ibnuja/hypersonic/navigation/selection/: SelectionToolbarWidget.java
src/main/java/io/ibnuja/hypersonic/navigation/settings/: SettingWindow.java
src/main/java/io/ibnuja/hypersonic/navigation/sidebar/: SidebarRow.java
src/main/java/io/ibnuja/hypersonic/playback/: ControlsWidget.java  InfoWidget.java  PlaybackControlsWidget.java  PlaybackInfoWidget.java  PlaybackViewModel.java  PlaybackWidget.java  PlayerState.java
src/main/java/io/ibnuja/hypersonic/service/audio/: AudioPlayer.java  Backend.java  GstBackend.java
src/main/java/io/ibnuja/hypersonic/state/: App.java  Playback.java  PlaybackState.java  PlayerState.java
src/main/java/io/ibnuja/hypersonic/trait/: Dispatcher.java  UpdatableState.java
src/main/java/io/ibnuja/hypersonic/ui/: MainWindow.java
src/main/java/io/ibnuja/hypersonic/ui/components/playback/: PlaybackControls.java  PlaybackControlsWidget.java  PlaybackInfo.java  PlaybackInfoWidget.java  PlaybackWidget.java
src/main/java/io/ibnuja/hypersonic/ui/pages/: HomePage.java  PlaceholderPage.java
src/main/kotlin/io/ibnuja/hypersonic/: SubsonicApi.kt
src/main/kotlin/io/ibnuja/hypersonic/service/api/: ConnectionState.kt  SubsonicApi.kt
src/main/kotlin/io/ibnuja/hypersonic/state/: ConnectionState.kt
src/main/resources/: .gitignore  hypersonicapp.gresource.xml  id.extonan.hypersonic.gschema.xml  log4j2.yaml  menu.blp  menu.ui  settings.blp  settings.ui  sidebar.blp  window.blp  window.ui
src/main/resources/components/playback/: playback_info.blp  playback_widget.blp
src/main/resources/components/selection/: selection_toolbar.blp
src/main/resources/components/settings/: settings.blp
src/main/resources/components/sidebar/: sidebar.blp
src/main/resources/pages/: home.blp
(+6 files in other folders)
